LinkedList 생활코딩 학습 remove, removeLast, size, get